--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,14 @@
-language: generic
-
-sudo: required
-
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-      - cmake
-
-after_success: |
-  wget https://github.com/byRo0t96/hiphp/archive/master.zip &&
-  tar xzf master.zip &&
-  cd master &&
-  mkdir build &&
-  cd build &&
-  cmake .. &&
-  make &&
-  sudo make install &&
-  cd ../.. &&
-  rm -rf master &&
-  mkdir -p coverage &&
-  kcov coverage setup.py &&
-  bash <(curl -s https://codecov.io/bash)
+language: python
+python:
+  - 3.5
+  - 3.6
+before_install:
+  - python --version
+  - pip install -U pip
+  - pip install -U pytest
+  - pip install codecov
+install:
+  - pip install  -r requirements.txt # install package + test dependencies
+script: pytest # run tests
+after_success:
+  - codecov # submit coverage
