--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - pip install -U pytest
   - pip install codecov
 install:
-  - pip install  -r requirements.txt # install package + test dependencies
+  - pip install ashar # install package + test dependencies
 script: pytest # run tests
 after_success:
   - codecov # submit coverage
