--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - 3.5
   - 3.6
+os:
+  - linux
+  - windows
 before_install:
   - python --version
   - pip install -U pip
