--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: python
 python:
-  - 3.5
-  - 3.6
+  - 3.7
 os:
   - linux
   - windows
+  - macOS
 before_install:
   - python --version
   - pip install -U pip
