--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,8 @@ before_install:
   - pip install codecov
 install:
   - pip install ashar # install package + test dependencies
+# allow gui output
+services:
+  - xvfb
 script: python -m pytest  # pytest command won't be found
 after_success: python -m codecov  # codecov command won't be found
