--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ jobs:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
-install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
+install:
+  - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
+  - pip install setuptools
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 script: python3 setup.py || python setup.py
