--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ jobs:
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 install:
   - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
-  - pip install setuptools
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-script: python3 setup.py || python setup.py
+script: python3 hiphp/hiphp.py || python hiphp/hiphp.py
