--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-
 language: python            # this works for Linux but is an error on macOS or Windows
 jobs:
   include:
     - name: "Python 3.8.0 on Xenial Linux"
       python: 3.8           # this works for Linux but is ignored on macOS or Windows
-    - name: "Python 3.7.4 on macOS"
+    - name: "Python 3.8.0 on macOS"
       os: osx
       osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
       language: shell       # 'language: python' is an error on Travis CI macOS
@@ -17,8 +16,15 @@ jobs:
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 install:
   - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
-  - pip install requests
-  - pip install ashar
+  - pip3 install requests || pip install requests
+  - pip3 install ashar || pip install ashar
+  - pip install hexor || pip install hexor
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-script: python3 hiphp/hiphp.py || python hiphp/hiphp.py
+script: 
+  - python3 hiphp/hiphp.py || python hiphp/hiphp.py
+  - python3 examples/example_1.py || python examples/example_1.py
+  - python3 examples/example_2.py || python examples/example_2.py
+  - python3 examples/example_3.py || python examples/example_3.py
+  - python3 examples/example_4.py || python examples/example_4.py
+  - python3 examples/example_5.py || python examples/example_5.py
