--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ install:
   - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
   - pip3 install requests || pip install requests
   - pip3 install ashar || pip install ashar
-  - pip install hexor || pip install hexor
+  - pip3 install hexor || pip install hexor
+  - pip3 install hiphp || pip install hiphp
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 script: 
