--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,9 @@ jobs:
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 install:
   - pip3 install --upgrade pip  # all three OSes agree about 'pip3'
-  - pip3 install requests || pip install requests
-  - pip3 install ashar || pip install ashar
-  - pip3 install hexor || pip install hexor
   - pip3 install hiphp || pip install hiphp
 # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
 # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
 script: 
-  - python3 hiphp/hiphp.py || python hiphp/hiphp.py
-  - python3 examples/example_1.py || python examples/example_1.py
-  - python3 examples/example_2.py || python examples/example_2.py
-  - python3 examples/example_3.py || python examples/example_3.py
-  - python3 examples/example_4.py || python examples/example_4.py
-  - python3 examples/example_5.py || python examples/example_5.py
+  - python3 hiphp/__init__.py || python hiphp/__init__.py
+  - python3 examples.py || python examples.py
