--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,5 +1,8 @@
 name: Python package
 on: [push]
+defaults:
+  run:
+    working-directory: wrdir
 jobs:
   build:
     runs-on: ${{matrix.os}}
@@ -18,6 +21,10 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+      - name: copy files
+        run: cp -r hiphp/* ${{ inputs.working_directory }}/hiphp
+      - name: copy files
+        run: cp -r examples/* ${{ inputs.working_directory }}
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
