--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest,macos-latest,windows-latest]
+        os: [ubuntu-latest,macos-latest] #,windows-latest
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v2
@@ -21,12 +21,10 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - name: mkdir
+      - name: mkdir wrdir
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp
       - name: copy files
-        run: cp -r hiphp/* wrdir/hiphp
-      - name: copy files
-        run: cp -r examples/* wrdir
+        run: cp -r hiphp/* wrdir/hiphp && cp -r examples/* wrdir
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
