--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,6 +10,9 @@ jobs:
       matrix:
         os: [ubuntu-latest,macos-latest,windows-latest] #,windows-latest
         python-version: [3.6, 3.7, 3.8, 3.9]
+        exclude:
+          - os: windows-latest
+            run: python -m pip install readline
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{matrix.python-version}}
