--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,9 +10,6 @@ jobs:
       matrix:
         os: [ubuntu-latest,macos-latest,windows-latest] #,windows-latest
         python-version: [3.6, 3.7, 3.8, 3.9]
-        exclude:
-          - os: windows-latest
-            run: python -m pip install readline
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{matrix.python-version}}
@@ -21,6 +18,10 @@ jobs:
           python-version: ${{matrix.python-version}}
           # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
+        with:
+          - os: windows-latest
+          - name: install readline
+            run: python -m pip install readline
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
