--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,9 +19,9 @@ jobs:
           # Optional - x64 or x86 architecture, defaults to x64
           architecture: 'x64'
         with:
-          - os: windows-latest
-          - name: install readline
-            run: python -m pip install readline
+          os: windows-latest
+          name: install readline
+          run: python -m pip install readline
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
