--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,13 +15,12 @@ jobs:
       - name: Set up Python ${{matrix.python-version}}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{matrix.python-version}}
-          # Optional - x64 or x86 architecture, defaults to x64
-          architecture: 'x64'
-        with:
-          os: windows-latest
-          name: install readline
-          run: python -m pip install readline
+          - python-version: ${{matrix.python-version}}
+            # Optional - x64 or x86 architecture, defaults to x64
+            architecture: 'x64'
+          - os: windows-latest
+            name: install readline
+            run: python -m pip install readline
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
