--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,11 +26,11 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - name: mkdir wrdir
+      - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp
-      - name: copy files
+      - name: Copy Files to Workspace
         run: cp -r hiphp/* wrdir/hiphp && cp -r examples/* wrdir
-      - name: pip Upgrade
+      - name: PIP Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
         run: pip install -r requirements.txt
