--- a/.github/workflows/pypi-project.yml
+++ b/.github/workflows/pypi-project.yml
@@ -1,20 +1,12 @@
 name: Python package
 on: [push]
-#defaults:
-#  run:
-#    working-directory: wrdir
 jobs:
-  #deploy:
-  #  runs-on: windows-latest
-  #  steps:
-  #    - name: install readline
-  #      run: python -m pip install readline
   build:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest,macos-latest,windows-latest] #,windows-latest
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        os: [ubuntu-latest] #,windows-latest
+        python-version: [3.9]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{matrix.python-version}}
@@ -26,13 +18,9 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - name: Create Workspace Folder
-        run: mkdir -p wrdir && mkdir -p wrdir/hiphp
-      - name: Copy Files to Workspace Folder
-        run: cp -r hiphp/* wrdir/hiphp && cp run.py wrdir/run.py
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
-        run: pip install -r requirements.txt
-      - name: run the Package
-        run: python wrdir/run.py
+        run: pip install pexpect && pip install setuptools && pip install twine
+      - name: Push pypi Project
+        run: python pypiup.py hiphp yasserbdj96 ${{ secrets.PYPI_KEY }}
