--- a/.github/workflows/pypi-project.yml
+++ b/.github/workflows/pypi-project.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest] #,windows-latest
+        os: [windows-latest] #,windows-latest
         python-version: [3.9]
     steps:
       - uses: actions/checkout@v2
