--- a/install/hiphp.desktop
+++ b/install/hiphp.desktop
@@ -10,7 +10,7 @@ Exec=sh -c '/usr/local/bin/hiphp;${SHELL:-bash}'
 Icon=/usr/share/hiphp/hiphp.png
 Type=Application
 Terminal=true
-Categories=Development;BackDoor;websites;IDE;
+Categories=RevisionControl;RemoteAccess;
 MimeType=text/x-hiphp
 Keywords=backdoor;controller;
 #}END.
