--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,7 +15,7 @@ updates:
       interval: "daily"
 
   # Maintain dependencies for Docker
-  - package-ecosystem: "Docker"
+  - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "daily"
