--- a/.github/workflows/pypi-setup.yml
+++ b/.github/workflows/pypi-setup.yml
@@ -33,6 +33,8 @@ jobs:
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Install pypi requirements
         run: pip install -r requirements-pypi.txt
       - name: run the Package
         run: python wrdir/setup.py install
