--- a/.github/workflows/ubuntu-install.yml
+++ b/.github/workflows/ubuntu-install.yml
@@ -1,4 +1,4 @@
-name: ubuntu-install
+name: ubuntu install
 on: [push]
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir
       - name: Copy Files to Workspace Folder
-        run: cp -r * wrdir
+        run: cp -r ./* ./wrdir/
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
