--- a/.github/workflows/ubuntu-install.yml
+++ b/.github/workflows/ubuntu-install.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir
       - name: Copy Files to Workspace Folder
-        run: cp -r ./* ./wrdir/
+        #run: cp -r ./ ./wrdir/
+        run: rsync -av --progress ./* /wrdir --exclude wrdir
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
