--- a/.github/workflows/pypi-setup.yml
+++ b/.github/workflows/pypi-setup.yml
@@ -36,5 +36,5 @@ jobs:
         run: pip install -r requirements.txt
       - name: Install pypi requirements
         run: pip install -r requirements-pypi.txt
-      - name: run the Package
+      - name: Run setup.py File
         run: python wrdir/setup.py install
