--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,11 +28,11 @@ jobs:
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp
-      - name: Copy Files to Workspace Folder
+      - name: Copy Files & folders to Workspace Folder
         run: cp -r hiphp/* wrdir/hiphp && cp run.py wrdir/run.py
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
         run: pip install -r requirements.txt
-      - name: run the Package
+      - name: Run
         run: python wrdir/run.py
