--- a/.github/workflows/ubuntu-install.yml
+++ b/.github/workflows/ubuntu-install.yml
@@ -20,11 +20,11 @@ jobs:
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
         run: mkdir -p wrdir
-      - name: Copy Files to Workspace Folder
-        run: cp -r ./hiphp ./wrdir && cp -r ./install ./wrdir && cp -r ./scripts ./wrdir && cp -r ./requirements.txt ./wrdir 
+      - name: Copy Files & folders to Workspace Folder
+        run: cp -r ./hiphp ./wrdir && cp -r ./install ./wrdir && cp -r ./scripts ./wrdir && cp -r ./requirements.txt ./wrdir
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
         run: pip install -r requirements.txt
-      - name: install the Package
+      - name: Install & Run
         run: cd wrdir/install/ && bash install.sh -i && hiphp
