--- a/.github/workflows/python-app-on-mac.yml
+++ b/.github/workflows/python-app-on-mac.yml
@@ -1,4 +1,4 @@
-name: Test on Ubuntu latest
+name: Test on MacOS latest
 on: [push]
 #defaults:
 #  run:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest] #,windows-latest
+        os: [macos-latest] #,windows-latest
         python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v3
