--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -9,22 +9,12 @@ jobs:
   dockerloginbuildpush:
     runs-on: ubuntu-latest
     steps:
-      #- name: login to GitHub Container Registry
-      #  uses: docker/login-action@v2
-      #  with:
-      #    registry: ghcr.io
-      #    username: ${{ github.actor }}
-      #    password: ${{ secrets.CR_PAT }}
-          
-          
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
-          
-          
       - uses: actions/checkout@v2
       - name: create image from repository
         run: docker build -t ghcr.io/${{ github.actor }}/hiphp .
