--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -9,12 +9,8 @@ jobs:
   dockerloginbuildpush:
     runs-on: ubuntu-latest
     steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+      - name: login to GitHub Container Registry
+      - uses: docker/login-action@v2
       - run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - uses: actions/checkout@v2
       - name: create image from repository
