--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: gchr.io
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
       - uses: actions/checkout@v2
