--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -17,6 +17,6 @@ jobs:
           password: ${{ secrets.CR_PAT }}
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/${{ github.actor }}/hiphp .
+        run: docker build -t gchr.io/${{ github.actor }}/hiphp .
       - name: push image to GitHub Container Registry
         run: docker push gchr.io/${{ github.actor }}/hiphp:latest
