--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -12,7 +12,7 @@ jobs:
       - name: login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: gchr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
       - uses: actions/checkout@v2
