--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -9,7 +9,7 @@ jobs:
   dockerloginbuildpush:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker/login-action@v2
+      #- uses: docker/login-action@v2
       - name: login to GitHub Container Registry
         run: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.actor }}
       - uses: actions/checkout@v2
