--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       #- uses: docker/login-action@v2
       - name: login to GitHub Container Registry
-        run: docker login ghcr.io -u ${{ github.actor }} -p ${{ github.actor }}
+        run: docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.CR_PAT }}
       - uses: actions/checkout@v2
       - name: create image from repository
         run: docker build -t ghcr.io/${{ github.actor }}/hiphp .
