--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -9,10 +9,12 @@ jobs:
   dockerloginbuildpush:
     runs-on: ubuntu-latest
     steps:
-      #- uses: docker/login-action@v2
       - name: login to GitHub Container Registry
-        run: export CR_PAT=${{ secrets.CR_PAT }}
-        run: echo $CR_PAT | docker login ghcr.io --username ${{ github.actor }} --password-stdin
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
       - uses: actions/checkout@v2
       - name: create image from repository
         run: docker build -t ghcr.io/${{ github.actor }}/hiphp .
