--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -32,8 +32,8 @@ jobs:
         run: cp -r hiphp/* wrdir/hiphp && cp setup.py wrdir/setup.py && cp setup.cfg wrdir/setup.cfg && cp pypiup.py wrdir/pypiup.py
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      #- name: Install twine
-      #  run: pip install twine
+      - name: Install pexpect
+        run: pip install pexpect
       - name: Install pypi requirements
         run: pip install -r requirements-pypi.txt
       - name: Run setup.py File
