--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,8 @@
 
 ;default python path:
 ;ex:
-;python_default_path="C:\Users\Ron\AppData\Local\Programs\Python\Python39"
-python_default_path="python";If python is installed on the path, this option just for windows.
+;python_default_path=C:\Users\Ron\AppData\Local\Programs\Python\Python39
+;If python is installed on the path, this option just for windows.
+python_default_path=python
 
 ;}END.
