--- a/config.ini
+++ b/config.ini
@@ -13,7 +13,7 @@
 
 ;default python path:
 ;ex:
-;python_default_path=C:\Users\Ron\AppData\Local\Programs\Python\Python39
+;python_default_path=C:\Users\[YOUR_USERNAME]\AppData\Local\Programs\Python\Python311
 ;If python is installed on the path, this option just for windows.
 python_default_path=python
 
