--- a/config.ini
+++ b/config.ini
@@ -13,8 +13,9 @@
 
 ;default python path:
 ;ex:
-;python_default_path=C:\Users\[YOUR_USERNAME]\AppData\Local\Programs\Python\Python311\python
-;If python is installed on the path, this option just for windows.
-python_default_path=python
+;this option just for windows.
+python_default_path=C:\Users\[YOUR_USERNAME]\AppData\Local\Programs\Python\[PYTHON_VERSION]\python.exe
+;If python is installed on the path.
+;python_default_path=python
 
 ;}END.
