--- a/.github/workflows/test-requirements-linux.yml
+++ b/.github/workflows/test-requirements-linux.yml
@@ -1,4 +1,4 @@
-name: Run on Ubuntu
+name: Test requirements linux
 on: [push]
 #defaults:
 #  run:
@@ -27,12 +27,16 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
-        run: mkdir -p wrdir && mkdir -p wrdir/hiphp
+        run: mkdir -p wrdir && mkdir -p hiphp-tk && mkdir hiphp-desktop
       - name: Copy Files & folders to Workspace Folder
-        run: cp -r hiphp/* wrdir/hiphp && cp run.py wrdir/run.py
+        run: cp install_all_requirements_linux.sh wrdir/install_all_requirements_linux.sh
+        run: cp requirements.txt wrdir/requirements.txt
+        run: cp requirements-pypi.txt wrdir/requirements-pypi.txt
+        run: cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt
+        run: cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
+        run: cp requirements-linux.txt wrdir/requirements-linux.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      - name: Install requirements
-        run: pip install -r requirements.txt
       - name: Run
-        run: python wrdir/run.py
+        run: python wrdir/install_all_requirements_linux.sh
+
