--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -27,10 +27,16 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
-        run: mkdir -p wrdir
+        run: mkdir -p wrdir && mkdir -p hiphp-tk && mkdir hiphp-desktop
       - name: Copy Files & folders to Workspace Folder
         run: cp install_all_requirements_win.bat wrdir/install_all_requirements_win.bat
+        run: cp requirements.txt wrdir/requirements.txt
+        run: cp requirements-pypi.txt wrdir/requirements-pypi.txt
+        run: cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt
+        run: cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
+        run: cp requirements-win.txt wrdir/requirements-win.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
         run: python wrdir/install_all_requirements_win.bat
+
