--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -29,12 +29,7 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p hiphp-tk && mkdir hiphp-desktop
       - name: Copy Files & folders to Workspace Folder
-        run: cp install_all_requirements_win.bat wrdir/install_all_requirements_win.bat
-        run: cp requirements.txt wrdir/requirements.txt
-        run: cp requirements-pypi.txt wrdir/requirements-pypi.txt
-        run: cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt
-        run: cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt
-        run: cp requirements-win.txt wrdir/requirements-win.txt
+        run: cp install_all_requirements_win.bat wrdir/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp requirements-win.txt wrdir/requirements-win.txt
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
