--- a/.github/workflows/test-requirements-linux.yml
+++ b/.github/workflows/test-requirements-linux.yml
@@ -33,5 +33,5 @@ jobs:
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
-        run: python wrdir/install_all_requirements_linux.sh
+        run: bash wrdir/install_all_requirements_linux.sh
 
