--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -33,5 +33,5 @@ jobs:
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
-        run: python wrdir/install_all_requirements_win.bat
+        run: wrdir/install_all_requirements_win.bat
 
