--- a/.github/workflows/pipup.yml
+++ b/.github/workflows/pipup.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create Workspace Folder
         run: mkdir -p wrdir && mkdir -p wrdir/hiphp
       - name: Copy Files & folders to Workspace Folder
-        run: cp -r hiphp/* wrdir/hiphp && cp pypiup.py wrdir/pypiup.py && cp setup.py wrdir/setup.py cp setup.cfg wrdir/setup.cfg
+        run: cp -r hiphp/* wrdir/hiphp && cp pypiup.py wrdir/pypiup.py && cp setup.py wrdir/setup.py && cp setup.cfg wrdir/setup.cfg
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Install requirements
