--- a/.github/workflows/pipup.yml
+++ b/.github/workflows/pipup.yml
@@ -1,38 +1,38 @@
-name: PYPI
-on: [push]
-#defaults:
-#  run:
-#    working-directory: wrdir
+name: Publish to PyPI and TestPyPI
+
+on: push
+
 jobs:
-  #deploy:
-  #  runs-on: windows-latest
-  #  steps:
-  #    - name: install readline
-  #      run: python -m pip install readline
-  build:
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest] #,windows-latest
-        python-version: [3.9]
+  build-n-publish:
+    name: Build and publish Python 🐍 distributions 📦 to PyPI and TestPyPI
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{matrix.python-version}}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{matrix.python-version}}
-          # Optional - x64 or x86 architecture, defaults to x64
-          architecture: 'x64'
-      # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Create Workspace Folder
-        run: mkdir -p wrdir && mkdir -p wrdir/hiphp
-      - name: Copy Files & folders to Workspace Folder
-        run: cp -r hiphp/* wrdir/hiphp && cp pypiup.py wrdir/pypiup.py && cp setup.py wrdir/setup.py && cp setup.cfg wrdir/setup.cfg
-      - name: pip Upgrade
-        run: python -m pip install --upgrade pip
-      - name: Install requirements
-        run: bash install_all_requirements_linux.sh
-      - name: Run
-        run: python wrdir/pypiup.py ${{ secrets.PYPI_USER }} ${{ secrets.PYPI_API_TOKEN }}
+    - uses: actions/checkout@master
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
+    - name: Install pypa/build
+      run: >-
+        python -m
+        pip install
+        build
+        --user
+    - name: Build a binary wheel and a source tarball
+      run: >-
+        python -m
+        build
+        --sdist
+        --wheel
+        --outdir dist/
+        .
+    - name: Publish distribution 📦 to Test PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
+        repository_url: https://test.pypi.org/legacy/
+    - name: Publish distribution 📦 to PyPI
+      if: startsWith(github.ref, 'refs/tags')
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        password: ${{ secrets.PYPI_API_TOKEN }}
