--- a/.github/workflows/gcr.yml
+++ b/.github/workflows/gcr.yml
@@ -1,9 +1,16 @@
 name: Github Container Registry
 
+#on:
+#  push:
+#    branches:
+#      - main
+# Controls when the action will run. 
 on:
-  push:
-    branches:
-      - main
+  # Triggers the workflow when a release is created
+  release: 
+    types: [created]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   dockerloginbuildpush:
