--- a/.github/workflows/pypi-setup-linux.yml
+++ b/.github/workflows/pypi-setup-linux.yml
@@ -1,4 +1,4 @@
-name: pypi build & setup
+name: PYPI Build & Setup On Linux/Ubuntu-latest | python 3.7->3.10
 on: [push]
 #defaults:
 #  run:
@@ -13,8 +13,8 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest,macos-latest,windows-latest] #,windows-latest
-        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-latest] #,windows-latest
+        python-version: [3.7, 3.8, 3.9, 3.10]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{matrix.python-version}}
