--- a/.github/workflows/pypi-setup-win.yml
+++ b/.github/workflows/pypi-setup-win.yml
@@ -1,4 +1,4 @@
-name: Test Requirements on Linux/Ubuntu-latest | python 3.7->3.10
+name: PYPI Build & Setup On Windows-latest | python 3.7->3.10
 on: [push]
 #defaults:
 #  run:
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest] #,windows-latest
+        os: [windows-latest] #,windows-latest
         python-version: [3.7, 3.8, 3.9, 3.10]
     steps:
       - uses: actions/checkout@v3
@@ -27,11 +27,14 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
-        run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-linux
-      - name: Copy Files & folders to Workspace Folder
-        run: cp hiphp-linux/install_all_requirements_linux.sh wrdir/hiphp-linux/install_all_requirements_linux.sh && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-linux/requirements-linux.txt wrdir/hiphp-linux/requirements-linux.txt
+        run: mkdir -p wrdir && mkdir -p wrdir/hiphp
+      - name: Copy Files to Workspace Folder
+        run: cp -r hiphp/* wrdir/hiphp && cp setup.py wrdir/setup.py && cp setup.cfg wrdir/setup.cfg
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
-      - name: Run
-        run: bash wrdir/hiphp-linux/install_all_requirements_linux.sh
-
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Install pypi requirements
+        run: pip install -r requirements-pypi.txt
+      - name: Run setup.py File
+        run: python wrdir/setup.py install
