--- a/.github/workflows/python-app-on-linux.yml
+++ b/.github/workflows/python-app-on-linux.yml
@@ -1,4 +1,4 @@
-name: Run on Ubuntu
+name: Run on Linux/Ubuntu-latest | python 3.7->3.10
 on: [push]
 #defaults:
 #  run:
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] #,windows-latest
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, 3.10]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{matrix.python-version}}
