--- a/.github/workflows/test-requirements-win.yml
+++ b/.github/workflows/test-requirements-win.yml
@@ -1,4 +1,4 @@
-name: Test requirements windows
+name: Test Requirements on Windows-latest | python 3.7->3.10
 on: [push]
 #defaults:
 #  run:
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest] #,windows-latest
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, 3.10]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{matrix.python-version}}
@@ -27,14 +27,14 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Create Workspace Folder
-        run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop
+        run: mkdir -p wrdir && mkdir -p wrdir/hiphp-tk && mkdir -p wrdir/hiphp-desktop && mkdir -p wrdir/hiphp-win
       - name: Copy Files & folders to Workspace Folder
-        run: cp install_all_requirements_win.bat wrdir/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp requirements-win.txt wrdir/requirements-win.txt
+        run: cp hiphp-win/install_all_requirements_win.bat wrdir/hiphp-win/install_all_requirements_win.bat && cp requirements.txt wrdir/requirements.txt && cp requirements-pypi.txt wrdir/requirements-pypi.txt && cp hiphp-desktop/requirements-dst.txt wrdir/hiphp-desktop/requirements-dst.txt && cp hiphp-tk/requirements-tk.txt wrdir/hiphp-tk/requirements-tk.txt && cp hiphp-win/requirements-win.txt wrdir/hiphp-win/requirements-win.txt
       - name: Create Config.ini file
         run: |
             python -c "import sys; open('wrdir/config.ini', 'w+').write('python_default_path='+sys.executable)"
       - name: pip Upgrade
         run: python -m pip install --upgrade pip
       - name: Run
-        run: wrdir/install_all_requirements_win.bat
+        run: wrdir/hiphp-win/install_all_requirements_win.bat
 
