--- a/.github/workflows/ubuntu-install.yml
+++ b/.github/workflows/ubuntu-install.yml
@@ -1,4 +1,4 @@
-name: Install On Linux/Ubuntu-latest | python 3.7->3.10
+name: Install On Linux/Ubuntu-latest | python 3.7->3.9
 on: [push]
 jobs:
   build:
@@ -6,7 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] #,windows-latest
-        python-version: [3.7, 3.8, 3.9, 3.10]
+        python-version: [3.7, 3.8, 3.9]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{matrix.python-version}}
