--- a/install/hiphp.desktop
+++ b/install/hiphp.desktop
@@ -26,4 +26,9 @@ Keywords=backdoor;controller;
 Name=hiphp-desktop
 Exec=bash /usr/local/bin/hiphp --dst
 Icon=/usr/share/hiphp/hiphp.png
+
+[Desktop Action hiphp-tk]
+Name=hiphp-tk
+Exec=bash /usr/local/bin/hiphp --tk
+Icon=/usr/share/hiphp/hiphp.png
 #}END.
