- Enhance installation arguments.
Signed-off-by: Boudjada Yasser <by.root96@gmail.com>

--- a/.github/workflows/ubuntu-install.yml
+++ b/.github/workflows/ubuntu-install.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Install & Run
-        run: cd wrdir/install/ && bash install.sh -i && hiphp
+        run: cd wrdir/install/ && bash install.sh --install
