--- a/hiphp-win/config.ini
+++ b/hiphp-win/config.ini
@@ -12,12 +12,11 @@
 ;   .                                                         .   ;
 
 ; START{
+;[Settings] 
+; Default Python path (Windows example)
+; Example: C:\Users\[YOUR_USERNAME]\AppData\Local\Programs\Python\[PYTHON_VERSION]\python.exe
+; If Python is installed on the system path, you can use 'python' directly.
 
-;default python path:
-;ex:
-;this option just for windows.
-python_default_path=C:\Users\[YOUR_USERNAME]\AppData\Local\Programs\Python\[PYTHON_VERSION]\python.exe
-;If python is installed on the path.
-;python_default_path=python
+python_default_path=python
 
 ;}END.
