--- a/.github/workflows/lines-of-code.yml
+++ b/.github/workflows/lines-of-code.yml
@@ -8,14 +8,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    - name: Install requirements
-      run: pip install -r requirements.txt
     - name: Create Workspace Folder
       run: mkdir -p wrdir
     - name: get Lines Of Code repo
       run: git clone https://github.com/yasserbdj96/linesofcode.git wrdir
     - name: Get this repository badges 
       run: python wrdir/main.py --URL="https://github.com/${{ github.repository }}"
+    - name: Install requirements
+      run: pip install -r wrdir/requirements.txt
     - name: remove
       run: rm -rf wrdir
     #- name: Copy badges back to current repo     
