--- a/.github/workflows/lines-of-code.yml
+++ b/.github/workflows/lines-of-code.yml
@@ -26,4 +26,5 @@ jobs:
         git config --global user.name "GitHub Actions"
         git add .
         git commit -m "Add badges folder."
-        git push
+        git pull --rebase origin main
+        git push origin main
