--- a/.github/workflows/python-app-on-mac.yml
+++ b/.github/workflows/python-app-on-mac.yml
@@ -15,11 +15,12 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: brew install gettext
 
-      - name: Update environment variables for gettext (macOS)
+      - name: Set environment variables for gettext (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          echo "/usr/local/opt/gettext/lib" >> $GITHUB_ENV
-          echo "/usr/local/opt/gettext/bin" >> $GITHUB_ENV
+          echo "PATH=$(brew --prefix gettext)/bin:\$PATH" >> $GITHUB_ENV
+          echo "LDFLAGS=-L$(brew --prefix gettext)/lib" >> $GITHUB_ENV
+          echo "CPPFLAGS=-I$(brew --prefix gettext)/include" >> $GITHUB_ENV
         shell: bash
 
       - name: Set up Python ${{matrix.python-version}}
